--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+		compile fileTree(dir: 'libs', include: '*.jar')
     }
 }
 
